<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="nguyen.tipcalculator.MainActivity">

    <TextView
        android:id="@+id/billLabel"
        android:layout_width="115dp"
        android:layout_height="27dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="45dp"
        android:text="@string/bill_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="45dp"
        android:text="@string/percent_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billLabel" />

    <TextView
        android:id="@+id/tipPercentLabel"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="45dp"
        android:text="@string/tip_percent_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentLabel" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="45dp"
        android:text="@string/total_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentLabel" />

    <TextView
        android:id="@+id/percentTV"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/percent_tv"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/percentLabel"
        app:layout_constraintTop_toBottomOf="@+id/billET" />

    <TextView
        android:id="@+id/tipPercentTV"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="45dp"
        android:text="@string/tip_percent_tv"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tipPercentLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentTV" />

    <TextView
        android:id="@+id/totalTV"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="181dp"
        android:layout_marginTop="45dp"
        android:text="@string/total_tv"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/totalLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentTV"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/billET"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/billLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/incrementButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/increment_button"
        app:layout_constraintBottom_toTopOf="@+id/tipPercentTV"
        app:layout_constraintLeft_toRightOf="@+id/percentTV"
        app:layout_constraintTop_toBottomOf="@+id/billET"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/decrementButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/decrement_button"
        app:layout_constraintBottom_toTopOf="@+id/tipPercentTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/incrementButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billET"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="139dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalLabel"
        app:layout_constraintVertical_bias="0.5" />
</android.support.constraint.ConstraintLayout>
